styles.css
/* ... */
.open .bar3 {
  -webkit-transform: rotate(45deg) translate(-0.9rem, 0.9rem);
  transform: rotate(45deg) translate(-0.9rem, -0.8rem);
}

#navbar-mobile {
  position: absolute;
  list-style: none;
  margin: 0;
  padding: 0;
  right: 0;
  height: auto;
  display: none;
  flex-direction: column;
  border-radius: 15px;
  margin-top: 15px;
  background: rgba(104, 104, 104, 0.7);
}

#navbar-mobile.show {
  display: flex;
  animation: fadeIn 0.4s ease-in;
}

#navbar-mobile li {
  border-bottom: 1px solid #ccc;
  width: 100%;
  list-style: none;
  margin: 0;
  padding: 0;
}

#navbar-mobile li:last-child {
  border-bottom: none;
}

#navbar-mobile .nav-mobile-link {
  display: flex;
  border-radius: 15px;
  padding: 20px;
  justify-content: center;
  align-items: center;
}

#navbar-mobile .nav-mobile-link a {
  color: white;
  font-size: var(--mid-font-size);
}

#navbar-mobile .nav-mobile-link:hover {
  background: var(--primary-color);
}

#navbar-mobile .nav-mobile-link a:hover {
  color: white;
}

@media (max-width: 1100px) {
  #header {
    display: flex;
    align-items: center;
    height: 15rem;
    padding: 0 50px;
  }

  .logo {
    font-size: 5rem;
  }

  #navbar ul {
    display: none;
  }

  #nav-toggle {
    display: block;
  }

  .theme-switch-wrapper {
    padding-right: 4rem;
  }

  .theme-switch {
    height: 3rem;
  }
}

/*--------------------------------------------------------------
                            HERO
--------------------------------------------------------------*/
#hero {
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--font-color);
}

.hero__pic-container {
  display: flex;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-name: bounce;
  animation-timing-function: ease;
}

.hero__pic-container img {
  height: 30rem;
  width: 30rem;
}

.hero-content {
  align-self: center;
  text-align: center;
}

.hero-title {
  color: var(--font-color);
  font-weight: 600;
  font-size: 2.5rem;
}

.hero-title,
.introText,
.introName,
.introPara {
  animation: fadeIn 2s;
}

.introPara {
  font-size: 1.5rem;
}

.introName {
  font-weight: 600;
  color: var(--primary-color);
  font-size: var(--big-font-size);
}

.greetings-animation {
  font-size: 2.5rem;
  font-weight: 600;
}

.greetings-animation span {
  position: relative;
}

.greetings-animation span::before {
  content: "Hello";
  color: var(--font-color);
  animation: words 15s infinite;
}

.greetings-animation span::after {
  content: "";
  background-color: var(--background-color);
  color: var(--font-color);
  position: absolute;
  width: calc(100% + 8px);
  height: 100%;
  border-left: 3px solid var(--primary-color);
  right: -8px;
  animation: cursor 0.6s infinite, typing 15s infinite;

}

@keyframes bounce {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-20px);
  }

  100% {
    transform: translateY(0);
  }
}

@keyframes cursor {
  to {
    border-left: 2px solid whitesmoke;
  }
}

@keyframes words {

  0%,
  20% {
    content: "Hello !";
  }

  21%,
  40% {
    content: "你好 !";
  }

  41%,
  60% {
    content: "こんにちは !";
  }

  61%,
  80% {
    content: "안녕하세요 !";
  }

  81%,
  100% {
    content: "Bonjour !";
  }
}

@keyframes typing {

  10%,
  15%,
  30%,
  35%,
  50%,
  55%,
  70%,
  75%,
  90%,
  95% {
    width: 0;
  }

  5%,
  20%,
  25%,
  40%,
  45%,
  60%,
  65%,
  80%,
  85% {
    width: calc(100% + 8px);
  }
}

@media (max-width: 991px) {
  #hero {
    flex-direction: column;
  }

  .introName {
    font-size: 3rem;
  }

  .hero-title {
    font-size: 3rem;
  }

  .introPara {
    font-size: 2.2rem;
  }

  .hero__pic-container {
    margin: 5rem;
  }
}

/*--------------------------------------------------------------
                            ABOUT
--------------------------------------------------------------*/

#about {
  background-color: var(--primary-color);
  color: white;
  height: auto;
}

.about-container {
  padding-bottom: 5%;
}

.about-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
}

.about-image {
  display: flex;
  align-items: center;
  justify-content: center;
}

.about-title {
  text-align: center;
  padding: 20px;
  font-size: var(--big-font-size);
  color: white;
}

.about-content {
  display: flex;
  height: 100%;
  justify-content: center;
  flex-direction: column;
  font-weight: light;
  font-size: var(--default-font-size);
  padding: 20px;
}

/*--------------------------------------------------------------
                            SKILLS
--------------------------------------------------------------*/

#skills {
  color: var(--font-color);
  border-top: 0px;
  height: auto;
}

.skills-main-title {
  color: var(--font-color);
}

.skill-main-desc {
  text-align: center;
  padding-bottom: 30px;
  font-size: var(--default-font-size);
}


.skill-desc {
  color: black;
  font-size: var(--default-font-size);
}

.skill-box {
  background-color: #fff;
  padding: 2.5rem 1.3rem;
  border: rgb(85, 84, 84, 0.2) 0.3rem solid;
  box-shadow: 0 10px 15px -10px #333;
  border-radius: 1rem;
  margin-bottom: 3rem;
  text-align: center;
}

.skill-icon {
  margin-bottom: 1rem;
  font-size: 30px;
  color: #1e1e1e;
}

.skill-box .fa-circle {
  transition: all 500ms ease;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: var(--primary-color);
}

.skill-box .fa-circle i {
  line-height: 0;
  font-size: 40px;
}

.skill-box:hover .fa-circle {
  transition: all 500ms ease;
  color: var(--secondary-color);
}

.skill-box:hover {
  box-shadow: 0 10px 20px -10px #333;
  transform: scale(1.1);
}

.skill-box .skill-title {
  font-size: 1.4rem;
  text-align: center;
  padding: 0.4rem 0;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 1px;
}

.skill-box .skill-content {
  color: #4e4e4e;
}

.skill-icon-lang {
  font-size: var(--big-font-size);
}

@media (max-width: 991px) {
  #skills-container {
    margin-bottom: 0rem;
  }

}
/* ... */

